# ParticlePhysics

./: .gitignore  CMakeLists.txt  README.md  buildrun.ps1  redundant_code.txt
shaders/: ComputeShader.h  Shader.h  fshader.glsl  particleShader.glsl  vshader.glsl
src/: Camera.h  Camera2.h  main.cpp
